--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dia dos Pais Oboticário</title>
+    <title>Dia dos Pais O boticário</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
@@ -23,8 +23,7 @@
         <a href="#home">home</a>
         <a href="#about">sobre</a>
         <a href="#menu">menu</a>
-        <a href="#products">produtos</a>
-        <!-- <a href="#review">Veja</a> -->
+        <!-- <a href="#products">produtos</a>         -->
         <a href="#contact">contato</a>
         <a href="#blogs">blogs</a>
     </nav>
@@ -73,7 +72,7 @@
                 <div class="price">R$20,00</div>
             </div>
         </div>
-        <a href="#" class="btn">checkout now</a>
+        <a href="#" class="btn color" >checkout now</a>
     </div>
 
 </header>
@@ -86,7 +85,7 @@
     <div class="content">
         <h3>Dia dos Pais<br> O Boticário</h3>
         <p>Produtos com muito amor e feitos com respeito ao nosso planeta respeitando a nossa  natureza.</p>
-        <a href="#" class="btn">Pegue o seu agora</a>
+        <a href="#" class="btn color">Pegue o seu agora</a>
     </div>
 </section>
 
@@ -104,9 +103,9 @@
 
         <div class="content">
             <h3>Beleza é o que a gente faz</h3>
-            <p>Somos uma empresa diversa, que respeita todas as formas de amar.Cuidar das pessas, do meio ambiente e do nosso planeta é o nosso propósito.</p>
-            <p>Essa página esse mês em espcial é uma homenagem para cada pai que sabe o quanto é importante cuidar e dar amor aos seus pequenos!!!</p>
-            <a href="#" class="btn">leia mais</a>
+            <p>Somos uma empresa diversa, que respeita todas as formas de amar.O nosso propósito é cuidar  das pessas, do meio ambiente e do nosso planeta.</p>
+            <p>Essa página desse mês em especial é uma homenagem a cada pai que sabe o quanto é importante cuidar e dar amor aos seus pequenos!!!</p>
+            <a href="#" class="btn color">leia mais</a>
         </div>
 
     </div>
@@ -117,7 +116,7 @@
 
 <!-- menu section starts -->
 
-<section class="menu" id="menu">
+<!-- <section class="menu" id="menu">
 
     <h1 class="heading">Produtos <span>Destaque</span></h1>
 
@@ -127,7 +126,7 @@
             <img src="assets2/destaque1.png" alt="">
             <h3>Preço especial dia dos pais</h3>
             <div class="price">120,00<span>190,00</span></div>
-            <a href="#" class="btn">adicionar ao carrinho</a>
+            <a href="#" class="btn color">adicionar ao carrinho</a>
 
         </div>
 
@@ -135,7 +134,7 @@
             <img src="assets2/destaque2.png" alt="">
             <h3>Preço especial dia dos pais</h3>
             <div class="price">120,00<span>190,00</span></div>
-            <a href="#" class="btn">adicionar ao carrinho</a>
+            <a href="#" class="btn color">adicionar ao carrinho</a>
 
         </div>
 
@@ -143,7 +142,7 @@
             <img src="assets2/destaque3.png" alt="">
             <h3>Preço especial dia dos pais</h3>
             <div class="price">120,00 <span>190,00</span></div>
-            <a href="#" class="btn">adicionar ao carrinho</a>
+            <a href="#" class="btn color">adicionar ao carrinho</a>
 
         </div>
 
@@ -151,7 +150,7 @@
             <img src="assets2/destaque4.png" alt="">
             <h3>Preço especial dia dos pais</h3>
             <div class="price">120,00<span>190,00</span></div>
-            <a href="#" class="btn">adicionar ao carrinho</a>
+            <a href="#" class="btn color">adicionar ao carrinho</a>
 
         </div>
 
@@ -159,7 +158,7 @@
             <img src="assets2/destaque5.png" alt="">
             <h3>Preço especial dia dos pais</h3>
             <div class="price">120,00<span>190,00</span></div>
-            <a href="#" class="btn">adicionar ao carrinho</a>
+            <a href="#" class="btn color">adicionar ao carrinho</a>
 
         </div>
 
@@ -167,7 +166,7 @@
             <img src="assets2/destaque6.png" alt="">
             <h3>Preço especial dia dos pais</h3>
             <div class="price">120,00<span>190,00</span></div>
-            <a href="#" class="btn">adicionar ao carrinho</a>
+            <a href="#" class="btn color">adicionar ao carrinho</a>
         </div>
 
     </div>
@@ -250,7 +249,7 @@
 
         
     </div>
-</section>
+</section> -->
 
 <!-- blogs section stars -->
 
@@ -267,7 +266,7 @@
                 <a href="#" class="title">Não abro mão do meu perfume</a>
                 <span>O perfume faz parte da sua personalidade</span>
                 <p>Gosto de deixar minha imprssão no ar.</p>
-                <a href="#" class="btn">Consulte Mais Informação</a>
+                <a href="#" class="btn color">Consulte Mais Informação</a>
             </div>
         </div>
         <div class="box">
@@ -278,7 +277,7 @@
                 <a href="#" class="title">Seu Perfume </a>
                 <span>Deixe seu cheiro por onde passar</span>
                 <p>Perfumes que vão deixar marcada a sua chegada.</p>
-                <a href="#" class="btn">Consulte mais informação</a>
+                <a href="#" class="btn color">Consulte mais informação</a>
             </div>
         </div>
         <div class="box">
@@ -289,7 +288,7 @@
                 <a href="#" class="title">Essências para cada gosto</a>
                 <span>Seu estilo</span>
                 <p>Para cada gosto uma fragância diferente mas, sempre com requinte.</p>
-                <a href="#" class="btn">Consulte mais informação</a>
+                <a href="#" class="btn color">Consulte mais informação</a>
             </div>
         </div>
         <div class="box">
@@ -300,7 +299,7 @@
                 <a href="#" class="title">Cada um tem o seu jeito</a>
                 <span>Esse é o meu</span>
                 <p>Gosto dos perfumes amadeirados.</p>
-                <a href="#" class="btn">Consulte mais informação</a>
+                <a href="#" class="btn color">Consulte mais informação</a>
             </div>
         </div>
         <div class="box">
@@ -311,7 +310,7 @@
                 <a href="#" class="title">Para cada momento</a>
                 <span>Seu estilo</span>
                 <p>Cheiros fazem parte da nossa vida.</p>
-                <a href="#" class="btn">Consulte mais informação</a>
+                <a href="#" class="btn color">Consulte mais informação</a>
             </div>
         </div>
         <div class="box">
@@ -322,7 +321,7 @@
                 <a href="#" class="title">Ocasião tem um sentimento </a>
                 <span>Meu estilo</span>
                 <p>Perfumes diferentes para cada momento.</p>
-                <a href="#" class="btn">Consulte mais informação</a>
+                <a href="#" class="btn color">Consulte mais informação</a>
             </div>
         </div>
 
@@ -356,7 +355,7 @@
                 <span class="fas fa-phone"></span>
                 <input type="number" placeholder="number">
             </div>
-            <input type="submit" value="contact now" class="btn">
+            <input type="submit" value="contact now" class="btn color">
         </form>
     </div>
 </section>
