README Atualizado :sparkles:

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
    <nav class="navbar">
         <a href="#home">home</a>
         <a href="#about">sobre</a>
-        <a href="#menu">menu</a>
-        <!-- <a href="#products">produtos</a>         -->
+        <!-- <a href="#menu">menu</a> -->
+        <a href="#products">produtos</a>        
         <a href="#contact">contato</a>
         <a href="#blogs">blogs</a>
     </nav>
@@ -84,7 +84,7 @@
 <section class="home" id="home">
     <div class="content">
         <h3>Dia dos Pais<br> O Boticário</h3>
-        <p>Produtos com muito amor e feitos com respeito ao nosso planeta respeitando a nossa  natureza.</p>
+        <p>Produtos feitos com muito amor cuidando da natureza<br> e respeito ao nosso planeta.</p>
         <a href="#" class="btn color">Pegue o seu agora</a>
     </div>
 </section>
@@ -112,66 +112,6 @@
 
 </section>
 
-<!-- about section ends -->
-
-<!-- menu section starts -->
-
-<!-- <section class="menu" id="menu">
-
-    <h1 class="heading">Produtos <span>Destaque</span></h1>
-
-    <div class="box-container">
-
-        <div class="box">
-            <img src="assets2/destaque1.png" alt="">
-            <h3>Preço especial dia dos pais</h3>
-            <div class="price">120,00<span>190,00</span></div>
-            <a href="#" class="btn color">adicionar ao carrinho</a>
-
-        </div>
-
-        <div class="box">
-            <img src="assets2/destaque2.png" alt="">
-            <h3>Preço especial dia dos pais</h3>
-            <div class="price">120,00<span>190,00</span></div>
-            <a href="#" class="btn color">adicionar ao carrinho</a>
-
-        </div>
-
-        <div class="box">
-            <img src="assets2/destaque3.png" alt="">
-            <h3>Preço especial dia dos pais</h3>
-            <div class="price">120,00 <span>190,00</span></div>
-            <a href="#" class="btn color">adicionar ao carrinho</a>
-
-        </div>
-
-        <div class="box">
-            <img src="assets2/destaque4.png" alt="">
-            <h3>Preço especial dia dos pais</h3>
-            <div class="price">120,00<span>190,00</span></div>
-            <a href="#" class="btn color">adicionar ao carrinho</a>
-
-        </div>
-
-        <div class="box">
-            <img src="assets2/destaque5.png" alt="">
-            <h3>Preço especial dia dos pais</h3>
-            <div class="price">120,00<span>190,00</span></div>
-            <a href="#" class="btn color">adicionar ao carrinho</a>
-
-        </div>
-
-        <div class="box">
-            <img src="assets2/destaque6.png" alt="">
-            <h3>Preço especial dia dos pais</h3>
-            <div class="price">120,00<span>190,00</span></div>
-            <a href="#" class="btn color">adicionar ao carrinho</a>
-        </div>
-
-    </div>
-
-</section>
 
 <!-- menu section ends -->
 
@@ -181,8 +121,7 @@
     <div class="box-container">
 
         <div class="box">
-            <div class="icons">
-            
+            <div class="icons">            
                 <a href="#" class="fas fa-shopping-cart"></a>
                 <a href="#" class="fas fa-heart"></a>
                 <a href="#" class="fas fa-eye"></a>
@@ -263,7 +202,7 @@
                 <img src="assets2/homem1.jpg" alt="">
             </div>
             <div class="content">
-                <a href="#" class="title">Não abro mão do meu perfume</a>
+                <a href="#" class="title">Esse? é o meu perfume</a>
                 <span>O perfume faz parte da sua personalidade</span>
                 <p>Gosto de deixar minha imprssão no ar.</p>
                 <a href="#" class="btn color">Consulte Mais Informação</a>
@@ -355,7 +294,7 @@
                 <span class="fas fa-phone"></span>
                 <input type="number" placeholder="number">
             </div>
-            <input type="submit" value="contact now" class="btn color">
+            <input type="submit" value="entre em contato" class="btn color">
         </form>
     </div>
 </section>
