Botão Modificado :sparkles:

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </nav>
 
     <div class="icons">
-        <div class="fas fa-search" id="sarch-btn"></div>
+        <div class="fas fa-search" id="search-btn"></div>
         <div class="fas fa-shopping-cart" id="cart-btn"></div>
         <div class="fas fa-bars" id="menu-btn"></div>
     </div>
@@ -42,37 +42,37 @@
     <div class="cart-items-container">
         <div class="cart-item">
             <span class="fas fa-times"></span>
-            <img src="assets/cart-item-1.png" alt="">
+            <img src="assets2/zaad.png" alt="">
             <div class="content">
                 <h3>cart item 01</h3>
-                <div class="price">R$20,00</div>
+                <div class="price">R$120,00</div>
             </div>
         </div>
         <div class="cart-item">
             <span class="fas fa-times"></span>
-            <img src="assets/cart-item-2.png" alt="">
+            <img src="" alt="">
             <div class="content">
                 <h3>cart item 02</h3>
-                <div class="price">R$20,00</div>
+                <div class="price">R$120,00</div>
             </div>
         </div>
         <div class="cart-item">
             <span class="fas fa-times"></span>
-            <img src="assets/cart-item-3.png" alt="">
+            <img src="assets2/styleto.png" alt="">
             <div class="content">
                 <h3>cart item 03</h3>
-                <div class="price">R$20,00</div>
+                <div class="price"><R11></R11>20,00</div>
             </div>
         </div>
         <div class="cart-item">
             <span class="fas fa-times"></span>
-            <img src="assets/cart-item-4.png" alt="">
+            <img src="assets2/arbo.png" alt="">
             <div class="content">
                 <h3>cart item 04</h3>
-                <div class="price">R$20,00</div>
+                <div class="price">R$120,00</div>
             </div>
         </div>
-        <a href="#" class="btn color" >checkout now</a>
+        <a href="#" class="btn2" >Compre agora</a>
     </div>
 
 </header>
@@ -85,7 +85,7 @@
     <div class="content">
         <h3>Dia dos Pais<br> O Boticário</h3>
         <p>Produtos feitos com muito amor cuidando da natureza<br> e respeito ao nosso planeta.</p>
-        <a href="#" class="btn color">Pegue o seu agora</a>
+        <a href="#" class="btn1 color">Pegue o seu agora</a>
     </div>
 </section>
 
@@ -105,7 +105,7 @@
             <h3>Beleza é o que a gente faz</h3>
             <p>Somos uma empresa diversa, que respeita todas as formas de amar.O nosso propósito é cuidar  das pessas, do meio ambiente e do nosso planeta.</p>
             <p>Essa página desse mês em especial é uma homenagem a cada pai que sabe o quanto é importante cuidar e dar amor aos seus pequenos!!!</p>
-            <a href="#" class="btn color">leia mais</a>
+            <a href="#" class="btn1 color">leia mais</a>
         </div>
 
     </div>
@@ -294,7 +294,7 @@
                 <span class="fas fa-phone"></span>
                 <input type="number" placeholder="number">
             </div>
-            <input type="submit" value="entre em contato" class="btn color">
+            <a href="#" class="btn1">Enviar</a>
         </form>
     </div>
 </section>
