Image Cart Item Atualizada :sparkles:

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
         <div class="cart-item">
             <span class="fas fa-times"></span>
-            <img src="" alt="">
+            <img src="assets2/quasar-.png" alt="">
             <div class="content">
                 <h3>cart item 02</h3>
                 <div class="price">R$120,00</div>
@@ -61,7 +61,7 @@
             <img src="assets2/styleto.png" alt="">
             <div class="content">
                 <h3>cart item 03</h3>
-                <div class="price"><R11></R11>20,00</div>
+                <div class="price"><R11></R11>120,00</div>
             </div>
         </div>
         <div class="cart-item">
