Copy Botões Atualizada :sparkles:

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
                 <a href="#" class="title">Esse? é o meu perfume</a>
                 <span>O perfume faz parte da sua personalidade</span>
                 <p>Gosto de deixar minha imprssão no ar.</p>
-                <a href="#" class="btn color">Consulte Mais Informação</a>
+                <a href="#" class="btn color">Consulte Mais Informações</a>
             </div>
         </div>
         <div class="box">
@@ -216,7 +216,7 @@
                 <a href="#" class="title">Seu Perfume </a>
                 <span>Deixe seu cheiro por onde passar</span>
                 <p>Perfumes que vão deixar marcada a sua chegada.</p>
-                <a href="#" class="btn color">Consulte mais informação</a>
+                <a href="#" class="btn color">Consulte mais Informações</a>
             </div>
         </div>
         <div class="box">
@@ -227,7 +227,7 @@
                 <a href="#" class="title">Essências para cada gosto</a>
                 <span>Seu estilo</span>
                 <p>Para cada gosto uma fragância diferente mas, sempre com requinte.</p>
-                <a href="#" class="btn color">Consulte mais informação</a>
+                <a href="#" class="btn color">Consulte mais Informações</a>
             </div>
         </div>
         <div class="box">
@@ -249,7 +249,7 @@
                 <a href="#" class="title">Para cada momento</a>
                 <span>Seu estilo</span>
                 <p>Cheiros fazem parte da nossa vida.</p>
-                <a href="#" class="btn color">Consulte mais informação</a>
+                <a href="#" class="btn color">Consulte mais Informações</a>
             </div>
         </div>
         <div class="box">
@@ -260,7 +260,7 @@
                 <a href="#" class="title">Ocasião tem um sentimento </a>
                 <span>Meu estilo</span>
                 <p>Perfumes diferentes para cada momento.</p>
-                <a href="#" class="btn color">Consulte mais informação</a>
+                <a href="#" class="btn color">Consulte mais Informações</a>
             </div>
         </div>
 
@@ -284,7 +284,7 @@
             <h3>Entre em Contato</h3>
             <div class="inputBox">
                 <span class="fas fa-user"></span>
-                <input type="text" placeholder="name">
+                <input type="text" placeholder="nome">
             </div>
             <div class="inputBox">
                 <span class="fas fa-envelope"></span>
@@ -292,7 +292,7 @@
             </div>
             <div class="inputBox">
                 <span class="fas fa-phone"></span>
-                <input type="number" placeholder="number">
+                <input type="number" placeholder="número">
             </div>
             <a href="#" class="btn1">Enviar</a>
         </form>
