Botões Atualizados :sparkles:

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <div class="price">R$120,00</div>
             </div>
         </div>
-        <a href="#" class="btn2" >Compre agora</a>
+        <a href="#" class="btn btn1" >Compre agora</a>
     </div>
 
 </header>
@@ -85,7 +85,7 @@
     <div class="content">
         <h3>Dia dos Pais<br> O Boticário</h3>
         <p>Produtos feitos com muito amor cuidando da natureza<br> e respeito ao nosso planeta.</p>
-        <a href="#" class="btn1 color">Pegue o seu agora</a>
+        <a href="#" class="btn btn1">Pegue o seu agora</a>
     </div>
 </section>
 
@@ -105,7 +105,7 @@
             <h3>Beleza é o que a gente faz</h3>
             <p>Somos uma empresa diversa, que respeita todas as formas de amar.O nosso propósito é cuidar  das pessas, do meio ambiente e do nosso planeta.</p>
             <p>Essa página desse mês em especial é uma homenagem a cada pai que sabe o quanto é importante cuidar e dar amor aos seus pequenos!!!</p>
-            <a href="#" class="btn1 color">leia mais</a>
+            <a href="#" class="btn btn1">Leia mais</a>
         </div>
 
     </div>
@@ -205,7 +205,7 @@
                 <a href="#" class="title">Esse? é o meu perfume</a>
                 <span>O perfume faz parte da sua personalidade</span>
                 <p>Gosto de deixar minha imprssão no ar.</p>
-                <a href="#" class="btn color">Consulte Mais Informações</a>
+                <a href="#" class="btn btn1">Consulte Mais Informações</a>
             </div>
         </div>
         <div class="box">
@@ -216,7 +216,7 @@
                 <a href="#" class="title">Seu Perfume </a>
                 <span>Deixe seu cheiro por onde passar</span>
                 <p>Perfumes que vão deixar marcada a sua chegada.</p>
-                <a href="#" class="btn color">Consulte mais Informações</a>
+                <a href="#" class="btn btn1">Consulte mais Informações</a>
             </div>
         </div>
         <div class="box">
@@ -227,7 +227,7 @@
                 <a href="#" class="title">Essências para cada gosto</a>
                 <span>Seu estilo</span>
                 <p>Para cada gosto uma fragância diferente mas, sempre com requinte.</p>
-                <a href="#" class="btn color">Consulte mais Informações</a>
+                <a href="#" class="btn btn1">Consulte mais Informações</a>
             </div>
         </div>
         <div class="box">
@@ -238,7 +238,7 @@
                 <a href="#" class="title">Cada um tem o seu jeito</a>
                 <span>Esse é o meu</span>
                 <p>Gosto dos perfumes amadeirados.</p>
-                <a href="#" class="btn color">Consulte mais informação</a>
+                <a href="#" class="btn btn1">Consulte mais informação</a>
             </div>
         </div>
         <div class="box">
@@ -249,7 +249,7 @@
                 <a href="#" class="title">Para cada momento</a>
                 <span>Seu estilo</span>
                 <p>Cheiros fazem parte da nossa vida.</p>
-                <a href="#" class="btn color">Consulte mais Informações</a>
+                <a href="#" class="btn btn1">Consulte mais Informações</a>
             </div>
         </div>
         <div class="box">
@@ -260,7 +260,7 @@
                 <a href="#" class="title">Ocasião tem um sentimento </a>
                 <span>Meu estilo</span>
                 <p>Perfumes diferentes para cada momento.</p>
-                <a href="#" class="btn color">Consulte mais Informações</a>
+                <a href="#" class="btn btn1">Consulte mais Informações</a>
             </div>
         </div>
 
@@ -294,7 +294,7 @@
                 <span class="fas fa-phone"></span>
                 <input type="number" placeholder="número">
             </div>
-            <a href="#" class="btn1">Enviar</a>
+            <a href="#" class="btn btn1">Enviar</a>
         </form>
     </div>
 </section>
